# RinEngine

./: .clang-format  .clangd-windows  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
resources/shaders/: triangle.frag  triangle.vert
src/: main.cpp
src/core/: application.hpp  clock.cpp  clock.hpp  defines.hpp  engine.cpp  engine.hpp  logger.cpp  logger.hpp
src/core/containers/: darray.hpp
src/core/math/: types.hpp
src/systems/renderer/: gui.cpp  gui.hpp  renderer.cpp  renderer.hpp
src/systems/renderer/vk/: context.cpp  context.hpp  device.cpp  pipeline.cpp  pipeline.hpp  swapchain.cpp  swapchain.hpp  types.hpp  utils.cpp  utils.hpp  vma_impl.cpp
src/systems/renderer/vulkan/: device.hpp  loader.cpp  loader.hpp  swpachain.cpp  types.hpp  utils.cpp  utils.hpp
src/systems/window/: window.cpp  window.hpp
